swagger, get stream names and role fixes
