# dto/streamDto.go
@@ -1,5 +1,5 @@
 package dto
 
 type StreamDto struct {
-	StreamName string `json:"streamName"`
+	Name string `json:"name"`
 }
